@@ -1,5 +1,5 @@
 
-HepMC::Version 2.01.04
+HepMC::Version 2.01.05
 HepMC::IO_GenEvent-START_EVENT_LISTING
 E 9 51 -1.0000000000000000e+00 -1.0000000000000000e+00 -1.0000000000000000e+00 20 0 309 1 2 0 0
 H 0 0 0 0 0 0 0 0 0 0 0 0 0
